--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "json-server": "^0.16.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-paginate": "^7.1.3"
   },
   "devDependencies": {
     "webpack": "^5.37.1",
