--- a/challenge_1/package.json
+++ b/challenge_1/package.json
@@ -18,6 +18,8 @@
     "react-paginate": "^7.1.3"
   },
   "devDependencies": {
+    "css-loader": "^5.2.6",
+    "style-loader": "^2.0.0",
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0"
   }
